5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1832_3179.log
== SUBMITION (2019-06-13 19:30:25) 
-- CODE:
from numpy import *
a= array(eval(input("numeros")))
c=-1
t=""
for v in a:
	t=t+a[i]
	i=i-1
print(t)	
-- EXECUTION TIME:
1.17318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/3179/main.py", line 6, in <module>
    t=t+a[i]
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:30:59) 
-- CODE:
from numpy import *
a= array(eval(input("numeros")))
c=-1
t=""
for v in a:
	t=t+a[i]
	i=i-1
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:31:56) 
-- CODE:
from numpy import *
a= array(eval(input("numeros")))
c=-1
i=0
t=""
for v in a:
	t=t+a[i]
	i=i-1
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:32:31) 
-- CODE:
from numpy import *
a= array(eval(input("numeros")))
c=-1
t=""
for v in a:
	t=t+a[i]
	t=t-1
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:33:01) 
-- CODE:
from numpy import *
a= array(eval(input("numeros")))
c=-1
t=""
t=i
for v in a:
	t=t+a[i]
	i=i-1
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
